# osu-droid

./: .codefactor.yml  .editorconfig  .gitignore  .typo-ci.yml  16kb-alignment.gradle  AndroidManifest.xml  BUILDING_FFMPEG_AAR.md  CLAUDE.md  CMakeLists.txt  GLES2_MIGRATION_REVIEW_FINAL.md  GLES32_MIGRATION_REVIEW.md  MAINMENU_PERFORMANCE.md  README.md  build.gradle  build_output.txt  changelog.md  debug.jks  default.properties  google-services.json  gradle.properties  obfuscatedclasses.txt  proguard-kotlin.pro  proguard.cfg  project.properties  settings.gradle  todolist
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: android.yml  autoCursor.yml  gradle-wrapper-validation.yml  master.yml
.run/: Run Unit Tests.run.xml
AndEngine/: AndroidManifest.xml  build.gradle  exportJarToAll.xml  push_google_code.bat
AndEngine-GLES2/: .gitignore  build.gradle
AndEngine-GLES2/jni/: Android.mk  Application.mk  build.sh
AndEngine/uml/: andengine_classdiagram.ucls
LibBASS/: build.gradle
andnext_markdown/: build.gradle
androidsvg/: build.gradle
assets/: osudroid.key
assets/app/: README.md  changelog.html  changelog.md
assets/html/: blockAreaSetting.html
gradle/wrapper/: gradle-wrapper.properties
jni/: discord_jni.cpp  discordpp.h
res/anim/: fast_activity_swap.xml  rotate_360.xml  slide_in_left.xml  slide_in_right.xml  warning_rotate.xml
res/color/: checkbox.xml  seekbar_background.xml  seekbar_progress.xml  text_selector.xml  textview.xml
res/drawable/: crown_16px.xml  (+140 more)
(+3155 files in other folders)
